import { mount } from "enzyme"
import React from "react"
import renderer from "react-test-renderer"
import Header, {
  formatRouteVariant,
} from "../../../src/components/propertiesPanel/header"
import { StateDispatchProvider } from "../../../src/contexts/stateDispatchContext"
import { HeadwaySpacing } from "../../../src/models/vehicleStatus"
import { Ghost, Vehicle } from "../../../src/realtime"
import { Route } from "../../../src/schedule"
import { deselectVehicle, initialState } from "../../../src/state"

const vehicle: Vehicle = {
  id: "v1",
  label: "v1-label",
  runId: "run-1",
  timestamp: 123,
  latitude: 0,
  longitude: 0,
  directionId: 0,
  routeId: "39",
  tripId: "t1",
  headsign: "Forest Hills",
  viaVariant: "X",
  operatorId: "op1",
  operatorName: "SMITH",
  bearing: 33,
  speed: 50.0,
  blockId: "block-1",
  headwaySecs: 859.1,
  headwaySpacing: HeadwaySpacing.Ok,
  previousVehicleId: "v2",
  scheduleAdherenceSecs: 0,
  scheduleAdherenceString: "0.0 sec (ontime)",
  scheduledHeadwaySecs: 120,
  isOffCourse: false,
  isLayingOver: false,
  layoverDepartureTime: null,
  blockIsActive: false,
  dataDiscrepancies: [
    {
      attribute: "trip_id",
      sources: [
        {
          id: "swiftly",
          value: "swiftly-trip-id",
        },
        {
          id: "busloc",
          value: "busloc-trip-id",
        },
      ],
    },
  ],
  stopStatus: {
    status: "in_transit_to",
    stopId: "s1",
    stopName: "Stop Name",
  },
  timepointStatus: {
    fractionUntilTimepoint: 0.5,
    timepointId: "tp1",
  },
  scheduledLocation: null,
  isOnRoute: true,
}

describe("Header", () => {
  test("renders a header", () => {
    const tree = renderer
      .create(
        <Header
          vehicle={vehicle}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("renders with route data", () => {
    const route: Route = {
      id: "39",
      directionNames: {
        0: "Outbound",
        1: "Inbound",
      },
      name: "39",
    }
    const tree = renderer
      .create(
        <Header
          vehicle={vehicle}
          selectedVehicleRoute={route}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("renders for an early vehicle", () => {
    const earlyVehicle: Vehicle = {
      ...vehicle,
      scheduleAdherenceSecs: -61,
    }
    const tree = renderer
      .create(
        <Header
          vehicle={earlyVehicle}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("renders for a late vehicle", () => {
    const earlyVehicle: Vehicle = {
      ...vehicle,
      scheduleAdherenceSecs: 361,
    }
    const tree = renderer
      .create(
        <Header
          vehicle={earlyVehicle}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("renders for an off-course vehicle", () => {
    const offCourseVehicle: Vehicle = {
      ...vehicle,
      isOffCourse: true,
    }

    const tree = renderer
      .create(
        <Header
          vehicle={offCourseVehicle}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("renders for a headway-based vehicle", () => {
    const offCourseVehicle: Vehicle = {
      ...vehicle,
      headwaySpacing: HeadwaySpacing.Ok,
    }

    const tree = renderer
      .create(
        <Header
          vehicle={offCourseVehicle}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("renders for a shuttle", () => {
    const shuttleVehicle: Vehicle = {
      ...vehicle,
      runId: "999-0555",
    }

    const tree = renderer
      .create(
        <Header
          vehicle={shuttleVehicle}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("renders for a ghost", () => {
    const ghost: Ghost = {
      id: "ghost-trip",
      directionId: 0,
      routeId: "39",
      tripId: "trip",
      headsign: "headsign",
      blockId: "block",
      viaVariant: "X",
      scheduledTimepointStatus: {
        timepointId: "t0",
        fractionUntilTimepoint: 0.0,
      },
    }

    const tree = renderer
      .create(
        <Header
          vehicle={ghost}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={true}
        />
      )
      .toJSON()

    expect(tree).toMatchSnapshot()
  })

  test("clicking the X close button deselects the vehicle", () => {
    const mockDispatch = jest.fn()

    const wrapper = mount(
      <StateDispatchProvider state={initialState} dispatch={mockDispatch}>
        <Header
          vehicle={vehicle}
          selectedVehicleRoute={undefined}
          shouldShowHeadwayDiagram={false}
        />
      </StateDispatchProvider>
    )
    wrapper
      .find(".m-properties-panel__header .m-close-button")
      .simulate("click")

    expect(mockDispatch).toHaveBeenCalledWith(deselectVehicle())
  })
})

describe("formatRouteVariant", () => {
  test("has variant and headsign", () => {
    expect(formatRouteVariant(vehicle)).toEqual("39_X Forest Hills")
  })

  test("missing variant and headsign", () => {
    const testVehicle: Vehicle = {
      ...vehicle,
      headsign: null,
      viaVariant: null,
    }
    expect(formatRouteVariant(testVehicle)).toEqual("39_")
  })

  test("doesn't show underscore variant character", () => {
    const testVehicle: Vehicle = {
      ...vehicle,
      headsign: null,
      viaVariant: "_",
    }
    expect(formatRouteVariant(testVehicle)).toEqual("39_")
  })
})
