// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders a header 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large on-time"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          1
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(1) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={14}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      39_X Forest Hills
    </div>
    <div
      className="m-properties-panel__headway-target"
    >
      <span
        className="m-properties-panel__headway-target-label"
      >
        HEADWAY TARGET
      </span>
      <span
        className="m-properties-panel__headway-target-value"
      >
        2
         min
      </span>
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;

exports[`Header renders for a ghost 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large ghost"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          N/A
        </text>
        <g
          transform="scale(0.7) translate(-24,-23)"
        >
          <path
            className="m-vehicle-icon__ghost-highlight"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
          <path
            className="m-vehicle-icon__ghost-body"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
        </g>
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={8}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      39_X headsign
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;

exports[`Header renders for a headway-based vehicle 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large on-time"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          1
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(1) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={14}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      39_X Forest Hills
    </div>
    <div
      className="m-properties-panel__headway-target"
    >
      <span
        className="m-properties-panel__headway-target-label"
      >
        HEADWAY TARGET
      </span>
      <span
        className="m-properties-panel__headway-target-value"
      >
        2
         min
      </span>
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;

exports[`Header renders for a late vehicle 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large late"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          1
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(1) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={14}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      39_X Forest Hills
    </div>
    <div
      className="m-properties-panel__headway-target"
    >
      <span
        className="m-properties-panel__headway-target-label"
      >
        HEADWAY TARGET
      </span>
      <span
        className="m-properties-panel__headway-target-value"
      >
        2
         min
      </span>
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;

exports[`Header renders for a shuttle 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large "
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          v1-label
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(1) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={14}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      Shuttle
    </div>
    <div
      className="m-properties-panel__headway-target"
    >
      <span
        className="m-properties-panel__headway-target-label"
      >
        HEADWAY TARGET
      </span>
      <span
        className="m-properties-panel__headway-target-value"
      >
        2
         min
      </span>
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;

exports[`Header renders for an early vehicle 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large early"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          1
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(1) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={14}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      39_X Forest Hills
    </div>
    <div
      className="m-properties-panel__headway-target"
    >
      <span
        className="m-properties-panel__headway-target-label"
      >
        HEADWAY TARGET
      </span>
      <span
        className="m-properties-panel__headway-target-value"
      >
        2
         min
      </span>
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;

exports[`Header renders for an off-course vehicle 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large off-course"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          1
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(1) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={14}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      39_X Forest Hills
    </div>
    <div
      className="m-properties-panel__headway-target"
    >
      <span
        className="m-properties-panel__headway-target-label"
      >
        HEADWAY TARGET
      </span>
      <span
        className="m-properties-panel__headway-target-value"
      >
        2
         min
      </span>
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;

exports[`Header renders with route data 1`] = `
<div
  className="m-properties-panel__header"
>
  <div
    className="m-properties-panel__label"
  >
    <svg
      style={
        Object {
          "height": 64,
          "width": 64,
        }
      }
      viewBox="-32 -20 64 64"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--large on-time"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={24}
          rx={12}
          ry={12}
          width={64}
          x={-32}
          y={19}
        />
        <text
          className="m-vehicle-icon__label"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={31}
        >
          1
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(1) rotate(0) translate(-24,-22)"
        />
        <text
          className="m-vehicle-icon__variant"
          dominantBaseline="alphabetic"
          textAnchor="middle"
          x={0}
          y={14}
        >
          X
        </text>
      </g>
    </svg>
  </div>
  <div
    className="m-properties-panel__variant"
  >
    <div
      className="m-properties-panel__inbound-outbound"
    >
      Outbound
    </div>
    <div
      className="m-properties-panel__variant-name"
    >
      39_X Forest Hills
    </div>
    <div
      className="m-properties-panel__headway-target"
    >
      <span
        className="m-properties-panel__headway-target-label"
      >
        HEADWAY TARGET
      </span>
      <span
        className="m-properties-panel__headway-target-value"
      >
        2
         min
      </span>
    </div>
  </div>
  <button
    className="m-close-button"
    onClick={[Function]}
  >
    <span
      className=""
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
  </button>
</div>
`;
